[project]
name = "LadrunoGraphStyle"
version = "1.0.0"
description = "Graphical style settings for scientific and structural plots using matplotlib."
readme = "README.md"
authors = [
  { name = "Nicolás Mora Bowen" },
  { name = "Patricio Palacios B." }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["matplotlib", "cycler"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }  
packages = ["LadrunoGraphStyle"]  
